some code cleanup of ScanBase
- make ParentScanComponent a nested top level class
- move field pointNumberAtLineBeginning into run method
- remove unnecessary nested if in waitIfPaused
- remove duplicated in sortArgs and rename to checkStepDirection
- rewrite sortArguments method and rename to checkScanArgumentsAndStepDirection
- remove unnecessary 'continue' statements in catch blocks in run method
- use pattern matching instanceof where possible
- add 'Exception to exception message prefix for wrapped exception in
     try/catch block for calling doCollection() in run() method
     (to match try/catch block for calling prepareCollection()).
- use streams and addAll/removeAll to move any detectors from
      allScannables to allDetectors
- use stream.distinct() to ensure no duplicate scannables
- fix some whitespace

Change-Id: I71519048d6c348597c40f6a60ae5db0c66f326ee